Add vectorized utf8 validation