@@ -11,7 +11,21 @@ repositories {
     mavenCentral()
 }
 
-compileJava {
+dependencies {
+    jmh 'org.openjdk.jmh:jmh-core:1.26'
+    testImplementation(platform('org.junit:junit-bom:5.7.0'))
+    testImplementation('org.junit.jupiter:junit-jupiter')
+}
+
+test {
+    jvmArgs += ['--add-modules', 'jdk.incubator.vector']
+    useJUnitPlatform()
+    testLogging {
+        events "passed", "skipped", "failed"
+    }
+}
+
+tasks.withType(JavaCompile) {
     options.compilerArgs += ['--add-modules', 'jdk.incubator.vector']
 }
 
@@ -35,9 +49,4 @@ application {
 
 jmh {
     jvmArgs = ['--add-modules', 'jdk.incubator.vector']
-}
-
-dependencies {
-    jmh group: 'org.openjdk.jmh',      name: 'jmh-core',         version: '1.26'
-    testCompile group: 'junit', name: 'junit', version: '4.12'
 }
